kmymoney/mymoney/mymoneyfile.h
@@ -220,7 +220,7 @@ public:
      * @note keep in sync with MyMoneyDbDef::m_currentVersion
      */
     constexpr static int availableFixVersion() {
-        return 9;
+        return 10;
     }
 
     /**
